--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,5 +8,5 @@
    <% end %>
 </ul>
 
-<p><a href="/places/new">Create a new destination you have visited</a></p>
+<p><a href="/places/new">Create a new Destination you have visited</a></p>
 
