--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,15 +2,15 @@
 
 <h2>Posts</h2>
 
-<ul>
+
   <% for post in @posts %>
-    <li><%= post["title"] %> </li>
+    <h3><%= post["title"] %> </h3>
 
-        <li><%= post["posted_on"] %> </li>
+        <p><%= post["posted_on"] %> </p>
 
-            <li><%= post["description"] %> </li>
+            <p><%= post["description"] %> </p>
   <% end %>
-</ul>
+
 
 <p>
   <a href="/posts/new?place_id=<%= @place["id"] %>"> New Post</a>
